--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,6 +27,7 @@ jobs:
     - name: Install project dependencies, including Flake8
       run: |
         poetry install
+        pip install flake8
       working-directory: ./refactorNCI
 
     - name: Run Flake8
